--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
 
         <activity
             android:name=".UI.Login.LoginActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,22 +51,22 @@
         </activity>
         <activity
             android:name=".UI.Signup.SignUp"
-            android:label="@string/title_activity_sign_up" />
+            android:label="@string/title_activity_sign_up"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".UI.ConfirmSignUp.Activity_SignUp_Confirm"
-            android:label="@string/title_activity_confirm_sign_up" />
+            android:label="@string/title_activity_confirm_sign_up"
+            android:screenOrientation="portrait" />
         <activity android:name=".UI.NewPassword.NewPasswordActivity" />
 
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
         <meta-data
             android:name="android.app.default_searchable"
             android:value="com.apkgetter.SearchResultsActivity" />
 
         <activity
             android:name=".UI.PasswordRecovery.PasswordRecovery"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".UI.HomePage.HomePageActivity"
             android:label="@string/app_name"
@@ -97,14 +98,11 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/LocAdoc_GoogleAPIKey" />
-
-        <activity android:name=".Test" />
         <activity
             android:name=".UI.PDFViewer.PDFViewer"
             android:screenOrientation="portrait" />
-        <activity android:name=".FilePicker" />
-        <activity android:name=".UI.Setting.ResetPassword" />
-
+        <activity android:name=".UI.Setting.ResetPassword"
+            android:screenOrientation="portrait"/>
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
             android:enabled="true" />
