--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -13,18 +13,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <activity
-        android:name="com.apkgetter.SearchResultsActivity"
-        android:label="@string/app_name"
-        android:launchMode="singleTop"
-        android:screenOrientation="portrait">
-        <intent-filter>
-            <action android:name="android.intent.action.SEARCH" />
-        </intent-filter>
-        <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
-        </intent-filter>
-    </activity>
 
     <application
         android:name=".LocAdocApp"
@@ -34,7 +22,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -87,14 +75,6 @@
             android:label="LocAdoc"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/LocAdoc_GoogleAPIKey" />
@@ -106,9 +86,8 @@
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
             android:enabled="true" />
-        <activity android:name=".UI.About.AboutActivity">
-
-        </activity>
+        <activity android:name=".UI.About.AboutActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
